--- a/style/style.css
+++ b/style/style.css
@@ -7,40 +7,64 @@
     border-radius: 50%;
     height: 150px;
     width:150px;
+    
+}
+.logo{
+    display: inline-block;
 }
 .detail{
     height:50px;
-    width: 500px;
+    width: 1400px;
     text-align: center;
     margin-left: 450px;
     bottom :500px;
     margin-bottom:20px;
-    background: aquamarine;
+    background: rgb(97, 218, 177);
 
     
 }
 .box{
+    margin-left: 20px;
     height: 30px;
     align-items: center
 }
 .btn{
     align-items: center;
     margin-left: 20px;
-    height: 50px;
-    width: 80px;
+    height: 40px;
+    width: 70px;
     margin-bottom: 20px;
-    background-color:rgb(162, 18, 18);
+    background-color:rgb(204, 193, 193);
+    
 }
 #display-container {
     display: flex;
+    width: 500px;
+    height: 200px;
     flex-wrap: wrap;
-    font-style: calc();
+    justify-content: center;
+    margin-left: 300px;
+    justify-content: space-around;
+}
+
    
     
     
-}
+
 @media screen and (min-width:768px) and (max-width:1040px){
     .conatiner{
     width: 400px;
     }
+    #display-container {
+        display: flex;
+        width: 600px;
+        height: 200px;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-left: 200px;
+        justify-content: space-around;
+    }
+}
+.main{
+    height: 20px;
 }
