--- a/style/style.css
+++ b/style/style.css
@@ -2,69 +2,115 @@
     margin: 0px;
     padding: 0px;
 }
+.background {
 
-.img{
-    border-radius: 50%;
-    height: 150px;
-    width:150px;
-    
+    background-color: gray;
 }
 .logo{
     display: inline-block;
 }
-.detail{
-    height:50px;
-    width: 1400px;
-    text-align: center;
-    margin-left: 450px;
-    bottom :500px;
-    margin-bottom:20px;
-    background: rgb(97, 218, 177);
 
-    
+.topcontent {
+    display: flex;
 }
-.box{
-    margin-left: 20px;
-    height: 30px;
-    align-items: center
+.topcontent img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+.topcontent a {
+    padding: 15px;
+    text-decoration: none;
+}
+.detail{
+    background: rgb(126, 236, 199);
+}
+input.box {
+    margin-left: 600px;
+    height: 28px;
+    border-radius: 15px;
+    width: 250px;
 }
 .btn{
-    align-items: center;
-    margin-left: 20px;
+    border-radius: 15px;
+    background-color: rgb(87, 86, 86);
+    margin-left: 10px;
     height: 40px;
     width: 70px;
     margin-bottom: 20px;
     background-color:rgb(204, 193, 193);
+    cursor: pointer;
     
 }
 #display-container {
     display: flex;
-    width: 500px;
-    height: 200px;
     flex-wrap: wrap;
-    justify-content: center;
-    margin-left: 300px;
-    justify-content: space-around;
 }
 
-   
-    
-    
+.displaydetails{
+    background-color: whitesmoke;
+    display: flex;
+    width: 45%;
+    margin-left: 40px;
+    margin-bottom: 20px;
+    border: 5px solid;
+    border-color: cornsilk;
+    border-radius: 10px;
+} 
+.displaydetails.hover {
+        background-color: gold;
+      
+}
+.names{
+    display: flex;
+    gap: 5px;
+    margin-left: 20px;
+}
+.content{
+    margin-left: 30px;
+}
+.email{
+    margin-left: 20px;
+}
+.loaction{
+    margin-left: 20px;
+}
+.exp{
+    margin-left: 20px;
+}
 
-@media screen and (min-width:768px) and (max-width:1040px){
-    .conatiner{
-    width: 400px;
-    }
+@media screen and (min-width:320px) and (max-width:728px){
     #display-container {
         display: flex;
-        width: 600px;
-        height: 200px;
         flex-wrap: wrap;
-        justify-content: center;
-        margin-left: 200px;
-        justify-content: space-around;
     }
-}
-.main{
-    height: 20px;
+    
+    .displaydetails{
+        background-color: rgb(66, 61, 61);
+        display: flex;
+        width: 30%;
+        margin-left: 40px;
+        margin-bottom: 20px;
+        border: 2px solid;
+        border-color: cornsilk;
+        border-radius: 10px;
+    } 
+    .displaydetails.hover {
+            background-color: gold;
+          
+    }
+    .names{
+        display: flex;
+        gap: 5px;
+        margin-left: 20px;
+    }
+    .content{
+        margin-left: 30px;
+    }
+    .email{
+        margin-left: 20px;
+    }
+    .loaction{
+        margin-left: 20px;
+    }
 }
