--- a/style/style.css
+++ b/style/style.css
@@ -88,7 +88,7 @@ input.box {
     .displaydetails{
         background-color: rgb(66, 61, 61);
         display: flex;
-        width: 30%;
+        width: 720px;
         margin-left: 40px;
         margin-bottom: 20px;
         border: 2px solid;
