Updated header background color

--- a/style/style.css
+++ b/style/style.css
@@ -23,7 +23,7 @@
     text-decoration: none;
 }
 .detail{
-    background: rgb(126, 236, 199);
+    background: burlywood;
 }
 input.box {
     margin-left: 600px;
