--- a/style/style.css
+++ b/style/style.css
@@ -113,4 +113,43 @@ input.box {
     .loaction{
         margin-left: 20px;
     }
+    input.box {
+        margin-left: 50px;
+        height: 28px;
+        border-radius: 15px;
+        width: 200px;
+    }
+    .btn{
+        border-radius: 15px;
+        background-color: rgb(87, 86, 86);
+        margin-left: 5px;
+        height: 40px;
+        width: 70px;
+        margin-bottom: 20px;
+        background-color:rgb(204, 193, 193);
+        cursor: pointer;
+    }
 }
+    @media screen and (min-width:729px) and (max-width:1020px){
+        #display-container {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        input.box {
+            margin-left: 50px;
+            height: 28px;
+            border-radius: 15px;
+            width: 200px;
+        }
+        .btn{
+            border-radius: 15px;
+            background-color: rgb(87, 86, 86);
+            margin-left: 5px;
+            height: 40px;
+            width: 70px;
+            margin-bottom: 20px;
+            background-color:rgb(204, 193, 193);
+            cursor: pointer;
+    }
+  
+    }
